@@ -1,3 +1,10 @@
+2007-02-12  Lassi A. Tuura  <lat@iki.fi>
+
+	* IgProfPool.cc (initFile): Create files in $IGPROF_TMPDIR if set.
+	(push): Fix a bug in writing out the entry descriptor when stack
+	depth is negative.  We protected everywhere else, but then claimed
+	excessively large entry, confusing reading side.
+
 2007-02-10  Lassi A. Tuura  <lat@iki.fi>
 
 	* IgProfPool.h, IgProfPool.cc: Handle better situations where the
